fix compare columns on mobile

--- a/public/css/editcube.css
+++ b/public/css/editcube.css
@@ -64,6 +64,21 @@
 {
     float: none;
     margin: 0 auto;
+    width: 100%;
+}
+
+@media (min-width: 768px) { 
+	.compare-col
+	{
+		width: 80%;
+	}
+}
+
+@media (min-width: 992px) { 
+	.compare-col
+	{
+		width: 60%;
+	}
 }
 
 .compare-header
